--- a/css/all.css
+++ b/css/all.css
@@ -3056,6 +3056,12 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	box-sizing: border-box;
 	background: #fff;
 }
+.map-popup h4,
+.map-popup h3{
+	font-family: 'rotondac-bold', Arial, Helvetica, sans-serif;
+	color: #00abc7;
+	padding: 0 0 7px;
+}
 .contacts-print{ display: none; }
 .locate-tabs{
 	position: relative;
@@ -4045,7 +4051,7 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	font: 16px/30px 'helvetica-neue-cyr-light', Arial, Helvetica, sans-serif;
 	color: #4c4c4c;
 }
-.filters__group .button,
+.filters-button,
 .btn-filter-opener{
 	float: left;
 	background: #fff;
@@ -4068,20 +4074,45 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	-webkit-transition-duration: 0.2s;
 	transition-duration: 0.2s;
 }
-.filters__group .button.is-checked{
+.filters-button.is-checked{
 	background: #55c7da;
 	color: #fff;
 }
-.desktop .filters__group .button:hover{ box-shadow: inset 0 0 0 1px #55c7da; }
-.desktop .filters__group .button.is-checked:hover{
+.desktop .filters-button:hover{ box-shadow: inset 0 0 0 1px #55c7da; }
+.desktop .filters-button.is-checked:hover{
 	border-color: #00abc7;
 	box-shadow: inset 0 0 0 1px #00abc7;
 	background: #00abc7;
 }
 .filters-button-middle .button{ min-width: 100px; }
 
-.filters__group .filters-counter,
-.filters__group .clear-filter{
+.filters-counter{
+	line-height: 15px;
+	color: #1a1a1a;
+	padding: 0 6px;
+	min-width:120px;
+	border: none;
+	background: none;
+
+	font-size: 0;
+	letter-spacing: -4px;
+}
+.filters-counter > div{
+	vertical-align: middle;
+	display: inline-block;
+	max-width: 98%;
+
+	font-size: 13px;
+	letter-spacing: 0.05em;
+}
+.filters-counter:before{
+	content: '';
+	display: inline-block;
+	height: 48px;
+	vertical-align: middle;
+}
+.desktop .filters-counter:hover{ box-shadow: none; }
+.clear-filters{
 	text-transform: uppercase;
 	font-size: 12px;
 	line-height: 15px;
@@ -4089,28 +4120,25 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	color: #1a1a1a;
 	background: #f7f7f7;
 	border-color: #dadada;
-	display: none;
+	min-width:120px;
 }
-.desktop .filters__group .filters-counter:hover{ box-shadow: none; }
-.filters__group .filters-counter.btn-show{ display: block; }
-
-.filters__group .clear-filter{ display: block; }
 .tags-group{
 	position: relative;
 	overflow: hidden;
 }
-.filters__group .clear-filter.disabled{
-	color: #dadada;
+.clear-filters.disabled{
+	color: #e4e2e2;
 	cursor: default;
+	border-color: #f1f1f1;
 }
-.desktop .filters__group .clear-filter:hover{ box-shadow: inset 0 0 0 1px #dadada; }
-.desktop .filters__group .clear-filter.disabled:hover{ box-shadow: none; }
-.filters__group .clear-filter > span{
+.desktop .clear-filters:hover{ box-shadow: inset 0 0 0 1px #dadada; }
+.desktop .clear-filters.disabled:hover{ box-shadow: none; }
+.clear-filters > span{
 	display: inline-block;
 	vertical-align: middle;
 	max-width: 50px;
 }
-.filters__group .clear-filter > i{
+.clear-filters > i{
 	vertical-align: middle;
 	margin-right: 5px;
 	-webkit-transition-property: -webkit-transform, opacity;
@@ -4120,23 +4148,23 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
-.filters__group .clear-filter.disabled > i{
-	opacity: 0.2;
+.clear-filters.disabled > i{
+	opacity: 0.1;
 	-ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
 	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
 }
-.desktop  .filters__group .clear-filter:hover > i{
+.desktop  .clear-filters:hover > i{
 	-webkit-transform: rotate(35deg);
 	-ms-transform: rotate(35deg);
 	transform: rotate(35deg);
 }
-.filters__group .clear-filter:active > i{
+.clear-filters:active > i{
 	-webkit-transform: rotate(0deg);
 	-ms-transform: rotate(0deg);
 	transform: rotate(0deg);
 }
-.desktop  .filters__group .clear-filter.disabled:hover > i,
-.filters__group .clear-filter.disabled:active > i{
+.desktop  .clear-filters.disabled:hover > i,
+.clear-filters.disabled:active > i{
 	-webkit-transform: rotate(0deg);
 	-ms-transform: rotate(0deg);
 	transform: rotate(0deg);
@@ -4148,8 +4176,10 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	font-family: 'rotondac-regular', Arial, Helvetica, sans-serif;
 	line-height: 30px;
 	color: #00abc7;
+	text-align: center;
 	text-decoration: none;
 	position: relative;
+	min-width: 120px;
 	-webkit-transition-property: background;
 	transition-property: background;
 	-webkit-transition-duration: 0.2s;
@@ -4201,7 +4231,7 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 }
 .mobile .filters-drop{ overflow: auto; }
 .filters-drop__holder{
-	padding: 44px 50px 24px;
+	padding: 44px 50px 70px;
 	position: relative;
 	box-sizing: border-box;
 }
@@ -4307,6 +4337,28 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	padding: 3px 0;
 }
 /*filters drop end*/
+
+/*filters panel*/
+.filters-options{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	box-sizing: border-box;
+	text-align: center;
+	width: 100%;
+	background: #f5f5f5;
+	box-shadow: 0 -3px 15px -3px rgba(0, 0, 0, 0.15);
+	z-index: 6;
+	display: none;
+}
+.filters-options .filters-button{
+	float: none;
+	display: inline-block;
+	vertical-align: top;
+}
+/*filters panel end*/
 
 .filters-opener{
 	position: fixed;
