--- a/css/mq-all.css
+++ b/css/mq-all.css
@@ -67,12 +67,18 @@
 		padding: 15px 1%;
 	}
 	.filter-more-options:before{ min-height: 72px; }
-	.filters-button,
-	.filters-counter,
-	.btn-filter-opener{
-		padding-left: 10px;
-		padding-right: 10px;
+	.filters-button{
+		padding: 5px 10px;
 		min-height: 42px;
+	}
+	.clear-filters,
+	.filters-counter{
+		padding-top: 0;
+		padding-bottom: 0;
+	}
+	.clear-filters:before,
+	.filters-counter:before{
+		height: 40px;
 	}
 	.search-form input[type="search"],
 	.search-form input[type="text"] {
@@ -80,8 +86,11 @@
 		height: 42px;
 	}
 	.search-form .btn-search { right: 15px; }
-	.filters__group:nth-child(3){ clear: left; }
-	.filters-drop__holder { padding: 34px 30px 14px; }
+	.filters-drop__holder {
+		padding-top: 34px;
+		padding-left: 30px;
+		padding-right: 30px;
+	}
 	.filters-drop__list,
 	.user-content .filters-drop__list { margin: 0 -5px 0 -10px; }
 	.filters-drop__list li,
@@ -198,14 +207,14 @@
 	/*MAIN end*/
 
 	/*FILTERS*/
-	.filters__group:nth-child(2){
+	.filters__group:nth-child(3){
 		float: none;
+		display: block;
 		overflow: hidden;
 	}
 	.filters__group.filters__search{
-		overflow: visible;
-		float: left;
-		min-width: 280px;
+		overflow: hidden;
+		float: none;
 	}
 	.filters-drop__list li,
 	.user-content .filters-drop__list li,
@@ -457,7 +466,84 @@
 	/*MAIN end*/
 
 	/*FILTERS*/
-	.filters-button-middle .button { min-width: 60px; }
+	.filters-opener{ display: block; }
+	.popup-show .filters-opener{ display: none; }
+	.header-show .filters-opener{
+		-webkit-transform: translate(0, 86px);
+		-ms-transform: translate(0, 86px);
+		transform: translate(0, 86px);
+	}
+	.filters{
+		position: fixed;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		border: none;
+		background: #fff;
+		z-index: 102;
+	}
+	.filters__panel{
+		height: 100%;
+		overflow: auto;
+	}
+	.filters,
+	.header-show .filters {
+		-webkit-transform: translate(-100%, 0);
+		-ms-transform: translate(-100%, 0);
+		transform: translate(-100%, 0);
+		opacity: 0;
+		visibility: hidden;
+	}
+	.filters__panel:before{ content: none; }
+
+	.filters__panel-holder{
+		box-sizing: border-box;
+		padding-top: 72px;
+	}
+	.filters__group {
+		display: block;
+		float: none;
+		border-left: none;
+		padding: 15px 20px;
+	}
+	.filters__group.filters__search {
+		float: none;
+		display: block;
+		position: absolute;
+		width: 100%;
+		top: 0;
+		left: 0;
+		padding-right: 60px;
+	}
+	.filters__label.hide-state{ display: block; }
+
+	.filters-drop{
+		position: relative;
+		left: auto;
+		right: auto;
+		top: auto;
+		overflow: visible;
+		opacity: 1 !important;
+		visibility: visible !important;
+		height: auto !important;
+		background: #fff;
+		display: none;
+	}
+	.filters-drop.show-drop{ display: block; }
+	.filters-drop__title{
+		font-size: 20px;
+		line-height: 24px;
+	}
+
+	.filters-options{
+		z-index: 103;
+	}
+	.show-filters-items{
+		padding: 5px 28px;
+	}
+
+	.btn-filter-close{ display: block; }
 	/*FILTERS end*/
 }
 
@@ -608,78 +694,7 @@
 	/*SIDEBAR end*/
 
 	/*FILTERS*/
-	.filters-opener{ display: block; }
-	.popup-show .filters-opener{ display: none; }
-	.header-show .filters-opener{
-		-webkit-transform: translate(0, 86px);
-		-ms-transform: translate(0, 86px);
-		transform: translate(0, 86px);
-	}
-	.filters{
-		position: fixed;
-		left: 0;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		border: none;
-		background: #fff;
-		z-index: 102;
-	}
-	.filters__panel{
-		height: 100%;
-		overflow: auto;
-	}
-	.filters,
-	.header-show .filters {
-		-webkit-transform: translate(-100%, 0);
-		-ms-transform: translate(-100%, 0);
-		transform: translate(-100%, 0);
-		opacity: 0;
-		visibility: hidden;
-	}
-	.filters__panel:before{ content: none; }
-
-	.filters__panel-holder{
-		box-sizing: border-box;
-		padding-top: 72px;
-	}
-	.filters__group {
-		display: block;
-		float: none;
-		border-left: none;
-		padding: 15px 20px;
-	}
-	.filters__group.filters__search {
-		float: none;
-		display: block;
-		position: absolute;
-		width: 100%;
-		top: 0;
-		left: 0;
-		padding-right: 60px;
-	}
-	.filters__label.hide-state{ display: block; }
-
-	.filters-drop{
-		position: relative;
-		left: auto;
-		right: auto;
-		top: auto;
-		overflow: visible;
-		opacity: 1 !important;
-		visibility: visible !important;
-		height: auto !important;
-		background: #fff;
-		display: none;
-	}
-	.filters-drop.show-drop{ display: block; }
-	.filters-drop__title{
-		font-size: 20px;
-		line-height: 24px;
-	}
-
 	.filters-options{
-		z-index: 103;
 		padding-left: 10px;
 		padding-right: 10px;
 	}
@@ -723,8 +738,6 @@
 		padding: 6px 17px;
 		font-size: 13px;
 	}
-
-	.btn-filter-close{ display: block; }
 	/*FILTERS end*/
 
 	/*FOOTER*/
