--- a/css/all.css
+++ b/css/all.css
@@ -3754,7 +3754,7 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 
 /*about*/
 .about{
-	padding: 0 30px;
+	padding: 0 30px 60px;
 	box-sizing: border-box;
 }
 .about__item{
@@ -3765,45 +3765,63 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	text-align: left;
 }
 .about__inner{
-	display: inline-block;
-	vertical-align: middle;
-	border: 1px solid #00abc7;
-	border-radius: 50px;
-	background: #fff;
-	box-sizing: border-box;
-	width: 740px;
 	position: relative;
-	text-align: left;
+	box-sizing: border-box;
 }
 .about__img{
-	width: 530px;
+	width: 47.3%;
 	position: absolute;
-	right: 100%;
+	left: 0;
 	top: 50%;
-	margin-right: -150px;
+	padding-left: 2.5%;
 	-webkit-transform: translate(0, -50%);
 	-ms-transform: translate(0, -50%);
 	transform: translate(0, -50%);
+	box-sizing: border-box;
 }
 .about__item_rtl .about__img{
-	left: 100%;
-	margin-left: -150px;
+	left: auto;
+	right: 0;
+	padding-right: 2.5%;
 }
 .about__img img {
-	margin-left: 28px;
 	display: block;
 }
 .about__item_rtl .about__img img{
 	margin-left: auto;
-	margin-right: 28px;
 }
 .about__content{
-	padding: 40px 60px 40px 210px;
+	display: inline-block;
+	vertical-align: top;
+	border: 1px solid #00abc7;
+	border-radius: 50px;
+	background: #fff;
 	box-sizing: border-box;
+	width: 66.2%;
+	text-align: left;
+	padding: 40px 5.4% 10px 17.7%;
+
+	font-size: 0;
+	letter-spacing: -4px;
 }
 .about__item_rtl .about__content{
-	padding-right: 210px;
-	padding-left: 60px;
+	padding-right: 17.7%;
+	padding-left: 5.4%;
+}
+.about__content:before{
+	content: '';
+	display: inline-block;
+	display:-moz-inline-stack;
+	height: 400px;
+	vertical-align: middle;
+}
+.about__align{
+	display: inline-block;
+	vertical-align: middle;
+	max-width: 98%;
+
+	font-size: 16px;
+	letter-spacing: normal;
 }
 .about__title{
 	font-family: 'rotondac-bold', Arial, Helvetica, sans-serif;
@@ -3825,7 +3843,6 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	margin-left: -40px;
 	background: #fcd105;
 }
-.about__text{}
 /*about end*/
 /*CONTENT*/
 
@@ -5229,138 +5246,4 @@ body.mCS_no_scrollbar > .mCustomScrollBox > .mCSB_container.mCS_no_scrollbar_y.m
 		top: auto !important;
 	}
 	/*products page end*/
-}
-
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
-
-/* ==========================================================================
-   Individual Media Queries
-   ========================================================================== */
-@media only screen and (max-width: 1919px){ .products__list .products__item{ width: 19.98%; } }
-@media only screen and (max-width: 1639px){ .products__list .products__item{ width: 24.98%; } }
-@media only screen and (max-width: 1359px){ .products__list .products__item{ width: 33.28%; } }
-@media only screen and (max-width: 1079px){ .products__list .products__item{ width: 49.98%; } }
-@media only screen and (max-width: 1079px){ .products__list .products__item{ width: 50%; } }
-@media only screen and (max-width: 979px){ .products__list .products__item{ width: 33.33%; } }
-@media only screen and (max-width: 839px){ .products__list .products__item{ width: 50%; } }
-@media only screen and (max-width: 559px){
-	.products__list{
-		max-width: 280px;
-		margin: 0 auto;
-	}
-	.products__list .products__item{
-		display: block;
-		width: 100%;
-		padding-bottom: 20px;
-	}
-	.products__list .products__inner{ height: auto !important; }
-}
-
-/* ==========================================================================
-   Media Queries on height
-   ========================================================================== */
-@media only screen and (max-height: 919px){
-	.sidebar__frame { padding-bottom: 245px; }
-	.sidebar .logo{ height: 170px; }
-	.sidebar .logo__img { margin: 27px auto 20px; }
-	.slogan { min-height: 90px; }
-	.social-networks, .social-networks .list{ padding: 18px 0; }
-}
-@media only screen and (max-height: 829px){
-	.sidebar .logo{ height: 144px; }
-	.sidebar .logo__img{
-		width: 150px;
-		height: 65px;
-		margin: 20px auto 12px;
-	}
-	.nav-list > li > a{
-		padding-top: 16px;
-		padding-bottom: 16px;
-	}
-}
-@media only screen and (max-height: 739px){
-	.sidebar__frame {
-		position: relative;
-		min-height: 100%;
-		box-sizing: border-box;
-		padding-bottom: 225px;
-	}
-	.social-networks, .social-networks .list{ padding: 8px 0; }
-	.slogan { min-height: 78px; }
-	.nav-list > li > a {
-		padding-top: 14px;
-		padding-bottom: 14px;
-	}
-}
-@media only screen and (max-height: 699px){
-	.sidebar__frame { padding-bottom: 195px; }
-	.slogan { min-height: 70px; }
-	.phone {
-		font-size: 20px;
-		line-height: 24px;
-	}
-	.phone a{
-		padding-top: 10px;
-		padding-bottom: 10px;
-	}
-	.nav-list > li > a {
-		padding-top: 12px;
-		padding-bottom: 12px;
-	}
-}
-@media only screen and (max-height: 639px){
-	.sidebar__frame { padding-bottom: 179px; }
-	.sidebar .logo { height: 90px; }
-	.sidebar .logo__img {
-		width: 140px;
-		height: 60px;
-		margin: 16px auto 12px;
-	}
-	.sidebar .logo__slogan{ display: none; }
-	.nav-list > li > a{
-		padding-top: 12px;
-		padding-bottom: 12px;
-		font-size: 20px;
-	}
-	.social-networks, .social-networks .list { padding: 0; }
-}
-@media only screen and (max-height: 579px){
-	.nav-list > li > a{
-		padding-top: 9px;
-		padding-bottom: 9px;
-	}
-}
-@media only screen and (max-height: 579px) and (max-width: 479px){
-	.slogan { min-height: 50px; }
-	.social-networks, .social-networks .list { padding: 5px 0; }
-	.nav-list > li > a {
-		padding-top: 12px;
-		padding-bottom: 12px;
-	}
-}
-@media only screen and (max-height: 539px) and (min-width: 639px){
-	.sidebar__frame{ padding-bottom: 115px; }
-	.color-tape-vertical{
-		-webkit-background-size: 100% 200%;
-		background-size: 100% 200%;
-	}
-	.social-networks{ display: none; }
-}
-@media only screen and (max-height: 539px) and (max-width: 479px){
-	.sidebar__frame { padding-bottom: 150px; }
-	.slogan { min-height: 38px; }
-	.phone {
-		font-size: 18px;
-		line-height: 22px;
-	}
-	.phone a{
-		padding-top: 8px;
-		padding-bottom: 8px;
-	}
-	.nav-list > li > a {
-		padding-top: 10px;
-		padding-bottom: 10px;
-	}
 }
