--- a/css/all.css
+++ b/css/all.css
@@ -4676,15 +4676,17 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	list-style: none;
 	padding: 0;
 	margin: 0;
+	line-height: 24px;
 }
 .footer-nav__links li,
 .user-content .footer-nav__links li,
-.user-content .footer-nav__links li:first-child{ padding: 0; }
+.user-content .footer-nav__links li:first-child{ padding: 0 0 6px; }
 .user-content .footer-nav__links li:before,
 .user-content .footer-nav__links li:first-child:before{ content: none; }
 .footer-nav__links li a{
 	text-decoration: none;
 	color: #414141;
+	padding-top: 6px;
 }
 .desktop .footer-nav__links li a:hover{ text-decoration: underline; }
 
