--- a/css/all.css
+++ b/css/all.css
@@ -2885,7 +2885,9 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	position: relative;
 	text-decoration: none;
 	color: #4a4a4a;
-	box-shadow: inset 0 0 0 1px #54c7d9, 0 10px 27px rgba(0, 0, 0, 0);
+	box-shadow: 0 10px 27px rgba(0, 0, 0, 0);
+	border: 1px solid #54c7d9;
+	/*box-shadow: inset 0 0 0 1px #54c7d9, 0 10px 27px rgba(0, 0, 0, 0);*/
 	-webkit-transition-property: box-shadow;
 	transition-property: box-shadow;
 	-webkit-transition-duration: 0.2s;
@@ -2896,7 +2898,7 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 .news__img{
 	float: left;
 	position: relative;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	height: 250px;
 	width: 250px;
 }
@@ -2907,13 +2909,22 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	top: 0;
 	right: 0;
 	bottom: 0;
-	box-shadow: inset 0 0 0 1px #54c7d9;
+	/*box-shadow: 0 0 0 1px #54c7d9;*/
 }
 .news__img img{ position: relative; }
 .news__content{
 	position: relative;
-	overflow: hidden;
 	padding: 25px 30px;
+	margin-left: 250px;
+}
+.news__content:before{
+	content: '';
+	position: absolute;
+	right: 100%;
+	top: 0;
+	bottom: 0;
+	width: 0;
+	border-left: 1px solid #54c7d9;
 }
 .new__date{
 	display: block;
@@ -2932,7 +2943,7 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	margin: 0 0 16px;
 	color: #333;
 	overflow: hidden;
-	max-height: 36px;
+	/*max-height: 36px;*/
 	text-transform: none;
 	-webkit-transition-property: color;
 	transition-property: color;
@@ -2943,7 +2954,7 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 .news__short{
 	overflow: hidden;
 	padding: 0;
-	max-height: 90px;
+	/*max-height: 90px;*/
 }
 
 /*social news*/
@@ -3859,11 +3870,10 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	box-sizing: border-box;
 }
 .about__img{
-	width: 41.3%;
+	width: 39.1%;
 	position: absolute;
 	left: 0;
 	top: 50%;
-	padding-left: 2.5%;
 	-webkit-transform: translate(0, -50%);
 	-ms-transform: translate(0, -50%);
 	transform: translate(0, -50%);
@@ -3872,13 +3882,13 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 .about__item_rtl .about__img{
 	left: auto;
 	right: 0;
-	padding-right: 2.5%;
 }
 .about__img img {
 	display: block;
+	margin: 0 0 0 auto;
 }
 .about__item_rtl .about__img img{
-	margin-left: auto;
+	margin-left: 0;
 }
 .about__content{
 	display: inline-block;
